# android-log-analyzer

./: .gitignore  BUILD.md  CHANGELOG.md  Makefile  QUICKREF.md  README.md  config.json  package.json
configs/: project.json
rules/: app_rules.json  hardware_rules.json  java_rules.json  memory_rules.json  network_rules.json  selinux_rules.json  system_rules.json
scripts/: batch_analyze.py  benchmark.sh  build_all.sh  check_deps.py  export.py  generate_rules.py  init_dirs.py  sepolicy.sh  setup.py  start.sh  test.sh
src/: __init__.py  version.py
src/api/: README.md  assertions.py  cache.py  config.py  datetime_utils.py  debug.py  debug_trace.py  decorators.py  dict_utils.py  ensure.py  file_helpers.py  file_utils.py  format.py  funcs.py  functional.py  functools_utils.py  generators.py  hasher.py  iterators.py  json_file.py  json_utils.py  list_utils.py  log_call.py  logger.py  main.py  math_utils.py  memoize.py  models.py  numbers_utils.py  once.py  param_defaults.py  params.py  query.py  retry.py  (+16 more)
src/core/: Cargo.toml
src/core/src/: aggregator.rs  analyzer.rs  bloom.rs  builder.rs  cache.rs  config.rs  correlation.rs  counter.rs  dedup.rs  error.rs  error_agg.rs  export.rs  filter.rs  heap.rs  histogram.rs  index.rs  lazy.rs  lib.rs  logger.rs  lru_cache.rs  main.rs  mmap.rs  observer.rs  option.rs  parser.rs  performance.rs  pid_index.rs  pipeline.rs  pool.rs  priority.rs  process.rs  queue.rs  ratelimit.rs  reporter.rs  result.rs  ring.rs  rules.rs  scorer.rs  singleton.rs  sparse.rs  (+9 more)
src/core/tests/: parser_test.rs  rules_test.rs
tests/: test_analyzer.py
(+139 files in other folders)
