[package]
name = "loganalyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
memchr = "2.5"
rayon = "1.8"
bufsize = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
